bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/implicit_hidden_base_frame.error_regex
Unable to find scope for frame: \[frame\] while adding frame: \[frame_name\].
